# Global_Overview_Radar

./:  .gcloudignore  .coveragerc  .dockerignore  .env.example  .env.reputation.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  Dockerfile  FILES.md  Makefile  README.md  backend .env  cloudbuild-backend.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  codeql.yml  deploy_cloudrun.yml  deploy_cloudrun_backend.yml  deploy_cloudrun_frontend.yml  deploy_demo.yml  deploy_hooks.yml  deploy_preview.yml  desktop_build.yml  format.yml  frontend.yml  ingest_cloudrun.yml  secret_scan.yml  typecheck.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/bbva_bugresolutionradar/: __init__.py  config.py
backend/bbva_bugresolutionradar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/bbva_bugresolutionradar/adapters/: __init__.py  base.py  csv_adapter.py  filesystem.py  json_adapter.py  utils.py  xlsx_adapter.py
backend/bbva_bugresolutionradar/api/: main.py
backend/bbva_bugresolutionradar/api/routers/: __init__.py  evolution.py  incidents.py  kpis.py  reputation.py
backend/bbva_bugresolutionradar/cli/: __init__.py  main.py
backend/bbva_bugresolutionradar/domain/: __init__.py  enums.py  kpis.py  merge.py  models.py
backend/bbva_bugresolutionradar/repositories/: __init__.py  cache_repo.py
backend/bbva_bugresolutionradar/services/: __init__.py  consolidate_service.py  ingest_service.py  reporting_service.py
backend/bugresolutionradar/: .env.example  __init__.py  config.py  logging_utils.py  user_settings.py
backend/bugresolutionradar/adapters/: __init__.py  base.py  csv_adapter.py  filesystem.py  jira_adapter.py  json_adapter.py  xlsx_adapter.py
backend/bugresolutionradar/api/: __init__.py  main.py
backend/bugresolutionradar/api/routers/: incidents.py  ingest.py  reputation.py
backend/bugresolutionradar/cli/: main.py
backend/bugresolutionradar/domain/: enums.py  kpis.py  merge.py  models.py
backend/bugresolutionradar/repositories/: __init__.py  cache_repo.py  incidents_overrides_repo.py
backend/bugresolutionradar/services/: __init__.py  consolidate_service.py  ingest_service.py  reporting_service.py
backend/bugresolutionradar/utils/: __init__.py  jira_cookie.py
backend/reputation/: .env.reputation.advanced.example  .env.reputation.example  Procfile  __init__.py  actors.py  auth.py  cli.py  cloudrun.env.example  config.py  env_crypto.py  logging_utils.py  models.py  state_store.py  user_settings.py
backend/reputation/api/: __init__.py  main.py
backend/reputation/api/routers/: __init__.py  auth.py  ingest.py  reputation.py
backend/reputation/collectors/: __init__.py  appstore.py  base.py  blogs.py  downdetector.py  forums.py  gdelt.py  google_play.py  google_reviews.py  guardian.py  news.py  newsapi.py  reddit.py  trustpilot.py  twitter.py  utils.py  youtube.py
backend/reputation/repositories/: __init__.py  cache_repo.py  overrides_repo.py
backend/reputation/sample_seed/reputation_llm_samples/: automotive_hyundai_llm.json  sports_atletico_madrid_llm.json  taylor_swift_eras_tour_llm.json  travel_airbnb_llm.json
backend/reputation/sample_seed/reputation_samples/: README.md  banking_bbva_empresas.json  fashion_zara.json  streaming_netflix.json
backend/reputation/services/: __init__.py  ingest_service.py  sentiment_service.py
data/assets/: Canales Digitales Enterprise.xlsx  NPS- Mejoras.xlsx  Query_260205_1937 (1).xls
data/assets_sample/: sample_issues.csv  sample_issues.json
data/reputation/: banking_bbva_empresas.json  banking_bbva_retail.json  config.json
data/reputation_llm/: README.md  banking_bbva_empresas_llm.json
data/reputation_llm_samples/: README.md  banking_bbva_empresas_llm.json  banking_bbva_retail_llm.json  crypto_bitcoin_llm.json  fashion_zara_llm.json  streaming_netflix_llm.json
data/reputation_samples/: README.md  automotive_hyundai.json  banking_bbva_empresas.json  banking_bbva_retail.json  config.json  crypto_bitcoin.json  fashion_zara.json  sports_atletico_madrid.json  (+3 more)
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  DATA_CONTRACTS.md  DECISION_LOG.md  DOCUMENTACION.md  EXTENDING_THE_SYSTEM.md  FILES.md  FRONTEND.md  GOVERNANCE_SECURITY.md  MENTAL_MODEL.md  METRICS_AND_SCORES.md  OPERATIONS.md  PIPELINE.md  README.md  SECURITY.md  SIGNALS_CATALOG.md
scripts/: app_icon.py  bench_backend.py  bench_frontend.py  bench_ingest.py  bench_reputation.py  build_desktop.py  desktop_app.py  generate_app_icons.py  jira_cookie_sync.py  kill_app.py  process_registry.py  run_local.py  visual-qa.sh
tests/: conftest.py  test_actors.py  test_adapters_csv_json.py  test_adapters_jira.py  test_adapters_utils.py  test_adapters_xlsx.py  test_api.py  test_auth.py  test_cache_repo.py  test_config_profiles.py  test_config_state.py  test_consolidate_service.py  test_env_crypto.py  test_health.py  test_incidents_router.py  test_ingest_collector_timeout.py  test_ingest_router.py  test_ingest_router_jobs.py  test_ingest_service.py  test_jira_cookie.py  test_jira_helpers.py  test_logging_utils.py  test_merge.py  test_overrides_repo.py  test_profile_recovery.py  test_reporting_kpis.py  test_reputation_collectors_market_replies.py  test_reputation_compare.py  test_reputation_markets_insights.py  test_reputation_meta_profiles.py  test_reputation_overrides.py  test_reputation_responses_summary.py  test_reputation_sentiment.py  test_settings_security.py  test_state_store.py  test_user_settings.py
(+86 files in other folders)
