# Stub pyproject.toml
# The real package metadata lives in backend/pyproject.toml.
# This file exists to keep editors/CI/tools that expect a root pyproject.toml
# from failing. Adjust CI to point to backend/pyproject.toml when possible.

[project]
name = "ReputationRadar-root-stub"
version = "0.0.0"
description = "Stub pyproject for tooling; real metadata in backend/pyproject.toml"

[tool.note]
message = "See backend/pyproject.toml for the real project configuration."
# (stub only) See backend/pyproject.toml for full configuration
